# simple_torch_NFFT

./: LICENSE  _config.yml  nfft.py  pyproject.toml  readme.md  runtime_comparison.md  test.py
_includes/: head-custom.html
_layouts/: default.html
docs/KernelSummation/: background.md  overview.md  overview.md.backup  specification.md
docs/NFFT/: overview.md  runtime.md  specification.md
simple_torch_NFFT/: __init__.py  functional.py  ndft.py  nfft.py
simple_torch_NFFT/data/: spherical_designs_S2.h5  spherical_designs_S3.h5
simple_torch_NFFT/fastsum/: __init__.py  basis_funs.py  fastsum.py  functional.py  utils.py
simple_torch_NFFT/nfft/: nfft.py  window_functions.py
test/: accuracy_test.py  example.py  kernel_batching_test.py  kernel_diff_batch.py  kernel_diff_test.py  kernel_summation_non_sliced.py  kernel_summation_runtime.py  kernel_summation_test.py  runtime_comparison.py  runtime_test.py  test.py  test2D.py  test_autodiff.py  test_batch_dims.py
