[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_torch_NFFT"
version = "0.1.0"
description = "PyTorch NFFT and Fast Kernel Summation via Slicing"
authors = [{ name = "Johannes Hertrich", email = "j.hertrich@ucl.ac.uk" }]
license = { text = "MIT" }
readme = "readme.md"
requires-python = ">=3.9"
dependencies = ["torch", "h5py", "scipy", "mpmath"]

[tool.setuptools.package-data]
simple_torch_NFFT = ["data/*.h5"]

[project.optional-dependencies]
keops = ["pykeops"]
